--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,47 @@ p{
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
 	font-size: 20px;
 }
-menu.menu-principal{
-	width: 50%;
-	background-color: aqua;
+.menu-principal{
+	width: 100%;
+	height: 50px;
+	background-color: blueviolet;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+}
+.menu-principal ul{
+	list-style: none;
+	position: relative;
+}
+.menu ul li{
+	width: 150px;
+	float: left;
+}
+.menu a{
+	padding: 15px;
+	display: block;
+	text-decoration: none;
+	text-align: center;
+	background-color: blueviolet;
+	color: #fff;
+	
+}
+.menu ul ul{
+	position: absolute;
+	visibility: hidden;
+
+}
+.menu ul li:hover ul{
+	visibility: visible;
+}
+.menu a:hover{
+	background-color: #FF44FF;
+	color: brown;
+}
+.menu ul ul li{
+	float: none;
+	border-bottom: solid 1px #ccc;
+}
+.menu ul ul li a{
+	background-color: #069;
 }
 main.principal{
 	width: 95%;
