--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,41 @@ p{
 footer{
 	background-color: blueviolet;
 }
+
+form{
+	margin: 0 auto;
+	width: 400px;
+	padding: 1em;
+	border: 1px solid #CCC;
+	border-radius: 1em;
+}
+.campos{
+	margin-top: 1em;
+}
+label{
+	display: inline-block;
+	width: 90px;
+	text-align: right;
+}
+input,textarea{
+	font: 1em sans-serif;
+	width: 300px;
+	-moz-box-sizing:border-box;
+	box-sizing: border-box;
+	border: 1px  solid #999;
+}
+input:focus, textarea:focus{
+	border-color: #000;
+}
+textarea{
+	vertical-align: top;
+	height: 5em;
+	resize: vertical;
+}
+.button{
+	padding-top: 10px;
+	padding-left: 270px;
+}
+button{
+	margin-left: 5em;
+}
